fixing overflow issue in main content when approaching mobilen screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,7 @@
     gap: var(--magentaa11y-spacing-size-40);
     flex-grow: 1;
     padding: var(--main-content-padding);
+    overflow: auto;
   }
 
   @media (max-width: 768px) {
